# stepworks

./: CMakeLists.txt  README.md  main.cpp
include/: .directory  apply.hpp  arity.hpp  detect_rw.hpp  fab.hpp  foab.hpp  foab_fab.hpp  indicator_value.hpp  none.hpp  reposition.hpp  step_abstract.hpp  stw.type_trait.hpp  stwtype_traits.hpp  undefined.hpp  xt.hpp  xtypes.hpp
include/apply/: apply_abstact.hpp  apply_function.hpp  apply_reader.hpp  apply_stream.hpp  apply_type.hpp  apply_writer.hpp  apply_wstream.hpp
include/box/: apply.hpp  box.hpp  boxm.hpp  constr.hpp  def.hpp  impl.hpp  mkagg.hpp  mkbox.hpp  singular.hpp  trace.hpp  typemorph.hpp  util.hpp  wrekurs.hpp  writer.hpp
include/cmorph/: imorph.hpp
include/cmorph/amorph/: select.hpp
include/cmorph/amorph/h/: apply.hpp  process.hpp
include/cmorph/amorph/hv/: apply.hpp  process.hpp  select.hpp
include/cmorph/imorph/: apply.hpp  boxtrans.hpp  process.hpp
include/core/: ftypetraits.hpp  offtype.hpp  optional.hpp  optional_type.hpp  valid.hpp
include/detect/: detect_allocator.hpp  detect_box.hpp  detect_cmorph.hpp  detect_fa2box.hpp  detect_fmeta.hpp  detect_fo.hpp  detect_foab.hpp  detect_indexref.hpp  detect_insert.hpp  detect_iterable.hpp  detect_push_back.hpp  detect_rec_writing.hpp  detect_resize.hpp  detect_rw.hpp  detect_size.hpp  detect_tostring.hpp  detect_totext.hpp  detect_tuple.hpp  detect_variant.hpp
include/eal/: argtuple_t.hpp  cons_t.hpp  curf.hpp  fo.hpp  fo_t.hpp  ht.hpp  lazy.hpp  lazy_t.hpp  lform.hpp  partl_t.hpp  reader_state.hpp  trace_t.hpp  util_t.hpp  val.hpp
include/eval/: apply.hpp  curf.hpp  evaluate.hpp  evaluatex.hpp  lform.hpp
include/fmeta/: fnx.hpp
include/foab.first/: filter.hpp  isvalid.hpp  typetext.hpp
include/matching/atom/: pure_atom_match.hpp  pure_atom_match_n.hpp  wte_atom_match.hpp  wtex_atom_match.hpp
include/meta/: base.hpp
include/prim/: .rcontainer.hpp.kate-swp  .stream.hpp.kate-swp  rcontainer.hpp  stream.hpp  wcontainer.hpp
include/process/: continuation_stack.hpp  proc.hpp  process.hpp  process_item.hpp  process_stream.hpp  processing.hpp
include/rw/: ich.hpp  index.hpp  itx.hpp  och.hpp  rbuffered.hpp  rforward.hpp  rforwardt.hpp  rgenerator.hpp  ror.hpp  rstream.hpp  select.hpp  stx.hpp  wcontext.hpp  wdictionary.hpp  wf.hpp  wforward.hpp  winsert.hpp  wstream.hpp
include/steph/: fmap.hpp  fmapt.hpp  functor.hpp
include/tuplex/: append.hpp  cons.hpp  ht.hpp  totext_t.hpp  util.hpp
include/util/: arg_n.hpp  arg_t.hpp  argtype.hpp  autoinstance.hpp  box.hpp  boxm.hpp  c2c.hpp  call.hpp  cons.hpp  detect.hpp  detect_rw.hpp  fab.hpp  function_traits.hpp  hmap.hpp  hmapx.hpp  ignore.hpp  iox.hpp  itx.hpp  lines_to_set.hpp  log.hpp  morph_frame.hpp  npow.hpp  offtype.hpp  optional.hpp  optional_type.hpp  overload.hpp  singular.hpp  strutil.hpp  symbolizer.hpp  testvoid.hpp  tostrx.hpp  trace_tuple.hpp  trim.hpp  type_attribute.hpp  value_ptr.hpp
samples/: CMakeLists.txt
samples/wordindex/: CMakeLists.txt  index.hpp  lines_to_set.hpp  process_string_line.hpp  readbuffer.hpp  wordindex.cpp  wordindex.h
samples/wordindex/data/: dickens-christmas.txt  nowords  test.txt
test/: CMakeLists.txt  amorph_test.cpp  app_rekurs_test.cpp  application_test.cpp  argtypetest.cpp  box0_test.cpp  box_test.cpp  boxinl_test.cpp  boxm_test.cpp  boxmk_test.cpp  cmorph_test.cpp  curf_test.cpp  detect_allocator_type_test.cpp  detect_handler_test.cpp  detect_iterable_test.cpp  detect_tostring.cpp  detect_tostring_test.cpp  detect_writingtype_test.cpp  eval_test.cpp  filter_test.cpp  fmap_test.cpp  fmeta_test.cpp  fo_test.cpp  foab_fab_test.cpp  foab_test.cpp  hmap_test.cpp  iox_test.cpp  itx_test.cpp  lazy_test.cpp  logsupport_test.cpp  match_test.cpp  match_wte_test.cpp  match_wtex_test.cpp  matryoshka_test.cpp  meta_test.cpp  morphology_test.cpp  process_item_test.cpp  process_stream_test.cpp  processing_test.cpp  reader_state_test.cpp  (+19 more)
